--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -55,6 +55,9 @@ jobs:
         languages: ${{ matrix.language }}
         config-file: ./.github/codeql-config.yml
 
+    - name: Install libpcap
+      run: sudo apt-get update && sudo apt-get install -y libpcap-dev
+
     - name: "Build Application"
       run: |
         make bin
