--- a/.github/workflows/kind.yml
+++ b/.github/workflows/kind.yml
@@ -41,6 +41,8 @@ jobs:
       uses: docker/setup-buildx-action@v3
       with:
         driver: docker
+    - name: Install libpcap
+      run: sudo apt-get update && sudo apt-get install -y libpcap-dev
     - name: Build Antrea Docker image with code coverage support
       run: |
         ./hack/build-antrea-linux-all.sh --pull --coverage
